--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^4.13.1",
     "mongoose-searchable": "^1.0.0",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0"
   }
 }
