--- a/front-end/insighttek/package.json
+++ b/front-end/insighttek/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "insighttek",
+  "name": "router-animations",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.6",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "startbootstrap-agency": "^4.0.0-beta"
+    "react": "^16.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-dom": "^16.0.0",
+    "react-modal": "^3.1.0",
+    "react-router-dom": "^4.2.2",
+    "rodal": "^1.6.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
